# scripts

./: .editorconfig  .gitignore  README.md  activate_venv.sh  crawler.py  pyproject.toml
sql_conn/: .env.template  colors.py  config.py  docker-compose-db.yml  init_db.py  main.py  requirements.txt  select.py
sql_conn/sql/: 00_init.sql
sql_conn/sql/init/: 01_create.sql  02_insert.sql  03_constraints.sql
sql_conn/sql/select/: select.sql
